Bug 1603964 - Only treat block-level frames as line-breaks in paragraph selection code. r=mats

Differential Revision: https://phabricator.services.mozilla.com/D61421

--HG--
extra : moz-landing-system : lando